src/main/java/semantic/symbolTable/test/failing/cyclicInheritance.ru
/? CyclicInheritanceException
struct A:C {}
struct B:A {}
struct C:B {}

impl A {.(){}}
impl B{.(){}}
impl C {.(){}}
start{}